--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,19 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-
-</div>
+<table>
+  <thead>
+    <tr>
+      <th>Currency</th>
+      <th>Buy</th>
+      <th>Sale</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let rate of exchangeRates">
+      <td>{{rate.ccy}} / {{rate.base_ccy}}</td>
+      <td>{{rate.buy|number: '1.2-2'}}</td>
+      <td>{{rate.sale|number: '1.2-2'}}</td>
+    </tr>
+  </tbody>
+</table>
 
 
