--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,11 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<table>
-  <thead>
-    <tr>
-      <th>Currency</th>
-      <th>Buy</th>
-      <th>Sale</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let rate of exchangeRates">
-      <td>{{rate.ccy}} / {{rate.base_ccy}}</td>
-      <td>{{rate.buy|number: '1.2-2'}}</td>
-      <td>{{rate.sale|number: '1.2-2'}}</td>
-    </tr>
-  </tbody>
-</table>
-
-<button class="btn btn-sm btn-outline-primary" >Select Today</button>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-8">
+      main
+    </div>
+    <div class="col-sm-4">
+      <app-aside></app-aside>
+    </div>
+  </div>
+</div>
