Navbar component. Bootstrap 4 + Angular (no jQuery!)

--- a/src/app/aside/currency-rates/currency-rates.component.html
+++ b/src/app/aside/currency-rates/currency-rates.component.html
@@ -1,16 +1,18 @@
-<table>
-  <thead>
-  <tr>
-    <th>Currency</th>
-    <th>Buy</th>
-    <th>Sale</th>
-  </tr>
-  </thead>
-  <tbody>
-  <tr *ngFor="let rate of exchangeRates">
-    <td>{{rate.ccy}} / {{rate.base_ccy}}</td>
-    <td>{{rate.buy|number: '1.2-2'}}</td>
-    <td>{{rate.sale|number: '1.2-2'}}</td>
-  </tr>
-  </tbody>
-</table>
+<div class="currencyRates table-responsive">
+  <table class="table table-striped table-active table-hover">
+    <thead>
+    <tr>
+      <th>Currency</th>
+      <th>Buy</th>
+      <th>Sale</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr *ngFor="let rate of exchangeRates">
+      <td>{{rate.ccy}} / {{rate.base_ccy}}</td>
+      <td>{{rate.buy|number: '1.2-2'}}</td>
+      <td>{{rate.sale|number: '1.2-2'}}</td>
+    </tr>
+    </tbody>
+  </table>
+</div>
