--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<app-navbar></app-navbar>
 <div class="container">
   <div class="row">
     <div class="col-sm-8">
