--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-8">
+      <app-login></app-login>
       <app-merchant></app-merchant>
     </div>
     <div class="col-sm-4">
