--- a/src/main/webapp/src/app/home/home.component.html
+++ b/src/main/webapp/src/app/home/home.component.html
@@ -1,6 +1,14 @@
 <p>
   home works!
 </p>
+<div [hidden]="!authenticated()">
+  <p>The ID is {{greeting.id}}</p>
+  <p>The content is {{greeting.content}}</p>
+</div>
+<div [hidden]="authenticated()">
+  <p>Login to see your greeting</p>
+</div>
+
 <div class="row">
   <div class="col-sm-8">
     <app-merchant></app-merchant>
