--- a/src/main/webapp/src/app/navbar/navbar.component.html
+++ b/src/main/webapp/src/app/navbar/navbar.component.html
@@ -25,9 +25,7 @@
           </div>
         </li>
       </ul>
-      <form class="form-inline my-2 my-md-0">
-        <input class="form-control" type="text" placeholder="Search" aria-label="Search">
-      </form>
+      <a class="nav-link" href="#">Sign Out <span class="sr-only">(current)</span></a>
     </div>
   </div>
 </nav>
