--- a/src/main/webapp/src/app/login/login.component.html
+++ b/src/main/webapp/src/app/login/login.component.html
@@ -1,20 +1,20 @@
-<form class="form-signin" #loginForm="ngForm" (ngSubmit)="onSubmit()">
+<form class="form-signin" #loginForm="ngForm" (ngSubmit)="login()">
   <div class="text-center mb-4">
     <p>Login page</p>
   </div>
 
   <div class="form-label-group">
     <input
-      type="email"
-      name="email"
-      id="inputEmail"
+      type="text"
+      name="login"
+      id="inputLogin"
       class="form-control"
-      placeholder="Email address"
-      [(ngModel)]="credentials.email"
+      placeholder="Login"
+      [(ngModel)]="credentials.username"
       required
       autofocus=""
     />
-    <label for="inputEmail">Email address or login</label>
+    <label for="inputLogin">Login</label>
   </div>
 
   <div class="form-label-group">
@@ -36,5 +36,5 @@
     </label>
   </div>
   <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-  <p class="mt-5 mb-3 text-muted text-center">© 2018</p>
+  <p class="mt-5 mb-3 text-muted text-center">© 2019</p>
 </form>
