--- a/src/main/webapp/src/app/navbar/navbar.component.html
+++ b/src/main/webapp/src/app/navbar/navbar.component.html
@@ -25,7 +25,7 @@
           </div>
         </li>
       </ul>
-      <a class="nav-link" href="#">Sign Out <span class="sr-only">(current)</span></a>
+      <button class="nav-link" href="#" (click)="logoutHandler()">Sign Out <span class="sr-only">(current)</span></button>
     </div>
   </div>
 </nav>
